// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DemandHeatBanner renders with sample data and matches snapshot 1`] = `
<View
  style={
    {
      "marginBottom": 20,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "700",
          "marginBottom": 6,
        },
        {
          "color": "#0F172A",
        },
      ]
    }
  >
    <Text />
     Hot Right Now
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "marginTop": 2,
        },
        {
          "color": "#64748B",
        },
      ]
    }
  >
    Most searched items across collectors
  </Text>
  <View
    style={
      {
        "gap": 6,
        "marginTop": 8,
      }
    }
  >
    <View
      accessibilityLabel="Search for Charizard Base Set"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 10,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 10,
            "padding": 10,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E2E8F0",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 16,
              "height": 32,
              "justifyContent": "center",
              "width": 32,
            },
            {
              "backgroundColor": "#F59E0B20",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "700",
              },
              {
                "color": "#F59E0B",
              },
            ]
          }
        >
          #
          1
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "600",
              },
              {
                "color": "#0F172A",
              },
            ]
          }
        >
          Charizard Base Set
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 11,
                "marginTop": 1,
              },
              {
                "color": "#64748B",
              },
            ]
          }
        >
          pokemon
           · 
          320
           searches
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#81D8D015",
            },
          ]
        }
      >
        <Text />
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "600",
              },
              {
                "color": "#81D8D0",
              },
            ]
          }
        >
          95
        </Text>
      </View>
    </View>
    <View
      accessibilityLabel="Search for LEGO Millennium Falcon"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 10,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 10,
            "padding": 10,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E2E8F0",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 16,
              "height": 32,
              "justifyContent": "center",
              "width": 32,
            },
            {
              "backgroundColor": "#F59E0B20",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "700",
              },
              {
                "color": "#F59E0B",
              },
            ]
          }
        >
          #
          2
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "600",
              },
              {
                "color": "#0F172A",
              },
            ]
          }
        >
          LEGO Millennium Falcon
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 11,
                "marginTop": 1,
              },
              {
                "color": "#64748B",
              },
            ]
          }
        >
          lego
           · 
          210
           searches
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#81D8D015",
            },
          ]
        }
      >
        <Text />
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "600",
              },
              {
                "color": "#81D8D0",
              },
            ]
          }
        >
          88
        </Text>
      </View>
    </View>
    <View
      accessibilityLabel="Search for Rolex Submariner"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 10,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 10,
            "padding": 10,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E2E8F0",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 16,
              "height": 32,
              "justifyContent": "center",
              "width": 32,
            },
            {
              "backgroundColor": "#F59E0B20",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "700",
              },
              {
                "color": "#F59E0B",
              },
            ]
          }
        >
          #
          3
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "600",
              },
              {
                "color": "#0F172A",
              },
            ]
          }
        >
          Rolex Submariner
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 11,
                "marginTop": 1,
              },
              {
                "color": "#64748B",
              },
            ]
          }
        >
          watches
           · 
          180
           searches
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#81D8D015",
            },
          ]
        }
      >
        <Text />
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "600",
              },
              {
                "color": "#81D8D0",
              },
            ]
          }
        >
          82
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`RegionalInsightsSection renders with sample data and matches snapshot 1`] = `
<View
  style={
    {
      "marginBottom": 20,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "700",
          "marginBottom": 6,
        },
        {
          "color": "#0F172A",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#81D8D0",
            "fontSize": 16,
          },
          undefined,
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
     Popular in Your Region
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "marginTop": 2,
        },
        {
          "color": "#64748B",
        },
      ]
    }
  >
    Trending near you based on collector activity
  </Text>
  <View
    style={
      {
        "gap": 6,
        "marginTop": 8,
      }
    }
  >
    <View
      accessibilityLabel="Search for charizard base set"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 10,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 10,
            "padding": 10,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E2E8F0",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 16,
              "height": 32,
              "justifyContent": "center",
              "width": 32,
            },
            {
              "backgroundColor": "#81D8D020",
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#81D8D0",
                "fontSize": 14,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "600",
              },
              {
                "color": "#0F172A",
              },
            ]
          }
        >
          charizard base set
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 11,
                "marginTop": 1,
              },
              {
                "color": "#64748B",
              },
            ]
          }
        >
          pokemon
           · 
          Europe
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#F59E0B15",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "600",
              },
              {
                "color": "#F59E0B",
              },
            ]
          }
        >
          42
        </Text>
      </View>
    </View>
    <View
      accessibilityLabel="Search for lego star wars"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 10,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 10,
            "padding": 10,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E2E8F0",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 16,
              "height": 32,
              "justifyContent": "center",
              "width": 32,
            },
            {
              "backgroundColor": "#81D8D020",
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#81D8D0",
                "fontSize": 14,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 13,
                "fontWeight": "600",
              },
              {
                "color": "#0F172A",
              },
            ]
          }
        >
          lego star wars
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 11,
                "marginTop": 1,
              },
              {
                "color": "#64748B",
              },
            ]
          }
        >
          lego
           · 
          North America
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#F59E0B15",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "600",
              },
              {
                "color": "#F59E0B",
              },
            ]
          }
        >
          28
        </Text>
      </View>
    </View>
  </View>
</View>
`;
